[gd_scene load_steps=14 format=2]

[ext_resource path="res://spells/lightning/lightning2.gd" type="Script" id=1]
[ext_resource path="res://spells/lightning/sprites/shadow.png" type="Texture" id=2]
[ext_resource path="res://spells/lightning/sprites/lightningBolt1.png" type="Texture" id=3]
[ext_resource path="res://spells/lightning/sprites/lightningBolt2.png" type="Texture" id=4]
[ext_resource path="res://spells/lightning/sprites/lightningBolt3.png" type="Texture" id=5]
[ext_resource path="res://spells/lightning/sprites/lightningBolt4.png" type="Texture" id=6]
[ext_resource path="res://spells/lightning/sprites/lightningBolt5.png" type="Texture" id=7]
[ext_resource path="res://spells/lightning/sprites/cloud.png" type="Texture" id=8]
[ext_resource path="res://spells/base_projectile.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), null, null, ExtResource( 4 ), null, ExtResource( 5 ), null, ExtResource( 6 ), ExtResource( 7 ), null ],
"loop": false,
"name": "lightning",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 46.8329

[sub_resource type="Animation" id=3]

resource_name = "death"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "free_scn"
} ]
}

[sub_resource type="Animation" id=4]

resource_name = "fire"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("cloud:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 4 ),
"update": 0,
"values": [ Vector2( 0, -10 ), Vector2( 0, -210 ) ]
}

[node name="lightning2" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}
has_activation = false

[node name="shadow" type="Sprite" parent="." index="0"]

position = Vector2( 0, 40 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="sprite" type="AnimatedSprite" parent="." index="1"]

position = Vector2( 0, -70 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "lightning"
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="cloud" type="Sprite" parent="." index="2"]

position = Vector2( 0, -10 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="projectile" type="Area2D" parent="." index="3"]

position = Vector2( 0, 40 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 9 )
element = 2
level = 2

[node name="shape" type="CollisionShape2D" parent="projectile" index="0"]

position = Vector2( 0, -2 )
scale = Vector2( 1, 0.4 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="anim" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/death = SubResource( 3 )
anims/fire = SubResource( 4 )
blend_times = [  ]

[node name="lifetime" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]

[connection signal="area_entered" from="projectile" to="projectile" method="_on_projectile_area_entered"]

[connection signal="body_entered" from="projectile" to="." method="_on_projectile_body_entered"]

[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]


